add function for searching accessions (on geneTree button side)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -138,7 +138,7 @@ html
             .col-md-4
               #searchStrain-group.input-group
                 span#sizing-addon1.input-group-addon.primary.sm-customized Search strain
-                input.form-control.sm-customized(type='text', placeholder='NCBI accession number', aria-describedby='sizing-addon1',oninput='search(this.value)')
+                input.form-control.sm-customized(type='text', placeholder='NCBI accession number', aria-describedby='sizing-addon1',oninput='search_accession(this.value)')
             #download_geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
