add button to reduce node size (not fully harmonized with updateTipAttribute)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -93,6 +93,10 @@ html
                 span.glyphicon.glyphicon-resize-small
               button#speciesTreeZoomReset.btn.btn-xs.btn-primary.btn_tooltip
                 span.glyphicon.glyphicon-refresh
+              //- button#speciesTree_nodePlus.btn.btn-xs.btn-primary.btn_tooltip
+              //-   span.glyphicon.glyphicon-plus
+              button#speciesTree_nodeMinus.btn.btn-xs.btn-primary.btn_tooltip
+                span.glyphicon.glyphicon-minus
               input#speciesTreeSynchr.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Synchr', data-off='Synchr', data-size='mini')
             //- #tree_zoom.col-md-2.btn_tooltip
             //-   input#tree_zoom_range.col-md-10(type='range', style='padding:0;')
