--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     script.
-      var speciesAbbr='Sa'
-    script(src='javascripts/meta-dict-Sa.js')
+      var speciesAbbr='TestSet'
+    script(src='javascripts/meta-dict-TestSet.js')
