--- a/public/stylesheets/page-appearance.css
+++ b/public/stylesheets/page-appearance.css
@@ -1,5 +1,28 @@
 @import url("//fonts.googleapis.com/css?family=Lato:300,400,700");
 
+@media (min-width: 1160px) {
+    div[class^="col"]{
+      padding-left:5px; padding-right:5px; /**/
+    }
+    .container{/* max-width: 2000px; */
+      width:85%;
+      } /* 1160px 970px;  */
+}
+
+body {
+  background-color: rgba(255, 140, 0, 0.03); !important /* rgba(255, 140, 10); */
+  font-family: "proxima-nova", Arial,sans-serif;
+  font-size: 15px;
+  line-height: 1.42857143;
+}/**/
+
+.cs_shadow {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 2px 6px 0 rgba(0,0,0,0.19);
+  margin-bottom:5px;
+  border-radius:3px;
+}
+
+
 /* font */
 html {
   font-family: "proxima-nova", Arial,sans-serif;
@@ -7,17 +30,14 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  font-family: "proxima-nova", Arial,sans-serif; 
-  font-size: 15px;
-  line-height: 1.42857143;
-}/**/
 
 #logo,#logo_footer h3{
   color:  #0000;/* #337AB7; */
-  font: normal 70px 'Cookie', cursive; 
+  font: normal 70px 'Cookie', cursive;
   margin: 0;
 }
+
+img{width: 100%;} /*max-width: 1363px; */
 
 .container {
 	margin-right: auto;
@@ -31,31 +51,22 @@ margin-right: -10px;
 margin-left: -10px;
 }
 
-/*#tree;*/
-.link {
-  fill: red;
-  stroke: steelblue;
-  stroke-width: 10px;
+span#coreThreshold {font-size: 0.8vw; }
+@media screen and (max-width: 1024px) {
+    span#coreThreshold{font-size: 0.01vw;}
 }
 
-/*#meta-info dropdown_list;*/
-.form-control.sm-customized
-{   height: 25px;
-    padding: 1px 5px;
-    font-size: 14px;}
+.col-md-4#col-coreThreshold { padding-left: 0;}
 
+/*noUiSlider background color */
+.noUi-connect { background:#2980B9;}
 
-/*searchStrain-group-btn position control*/
-#searchStrain-group-btn {
-    position: relative; /* absolute; */
-    left: 0px;
-    top: 0px;
-    z-index: 0;
+/* vertical noUiSlider */
+#slider-vertical-range {
+  height: 300px;/* margin: 0 auto 0px; */
 }
 
-#tree-viewer-button-groups {margin-left:15px}
-
-/* annotation-details */
+/* table: annotation-details */
 table {
     border-collapse: collapse;
     width: 50%;
@@ -67,47 +78,68 @@ th, td {
     border-bottom: 1px solid #ddd;
 }
  tr:hover {background-color: #f5f5f5}
- /**/
 
 table.dataTable thead > tr > th {
     padding-left: 1px;
     padding-right: 18px;
 }
-/*  
-table.dataTable th {
+/*table.dataTable th {
    text-align: left;
 } */
-/*
-table.dataTable thead > tr > th {
+/*table.dataTable thead > tr > th {
     text-align: left;
 }*/
 
 /* toggle-shape */
 .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px;font-size:10px; }
-.toggle.ios .toggle-handle { border-radius: 20px;font-weight: 100; }
-#zoomin,#zoomout,.btn {border-radius: 20px;}
-.btn.btn-info {border-radius: 2px;}
+/*.toggle.ios .toggle-handle { border-radius: 20px;font-weight: 100; }*/
+#zoomin,#zoomout,.btn {border-radius: 20px} /*; height: 25px;*/
+/*.btn.btn-info {border-radius: 2px;} */
+.btn.btn-primary.btn-xs.btn-square {border-radius: 2px;}
+/*.btn {border-radius: 50%;}*/
 #accordion {width: 150px;}
 
-/* btn size */ 
+/* treeLoader*/
+#treeLoader{
+  color:#428BCA;
+  font-weight: 300;
+  padding-left: 5px;
+}
+
+/*searchStrain-group*/
+.input-group-addon.primary {
+  border-radius: 20px 0px 0px 20px;
+  color: rgb(255, 255, 255);
+  background-color: #428BCA;
+  border-color: #428BCA; }
+
+/*#meta-info dropdown_list;*/
+.sm-customized, .form-control.sm-customized {
+  height: 24px;
+  padding: 1px 5px;
+  font-size: 12px;}
+
+#tree-viewer-button-groups {margin-left:15px}
+
+/* btn size */
 .btn-xs  {
   font-size:13px;
   /* line-height: 1.4; */
   /* background:  #008DDD; */
 }
 
-/*msa-button color*/
+/*msa-button color
 .smenubar .smenubar_alink {
-  background:   #337AB7; /*#008DDD;*/
-}
+  background:  red #337AB7;
+}*/
 
 /* alert new */
 .alert {
   padding: 5px 0 5px 15px; /* 15px; */
   margin-bottom: 15px;
   border: 1px solid transparent;
-  /* border-radius: 0; */
-  font-size: 17px;
+  /* font-size: 17px; */
+  font-size: 0.9vw;
 }
 .alert h4 {
   margin-top: 0;
@@ -153,13 +185,18 @@ table.dataTable thead > tr > th {
 .alert-info hr {
   border-top-color: rgba(0, 0, 0, 0);
 }
-.alert-info .alert-link {
-  color: #d2d2d2;
-}
-.alert-warning {
-  background-color: #f0ad4e;
+.alert-link {
+  background-color: #5cb85c;
   border-color: transparent;
-  color: #ebebeb;
+  color: #FFFFFF;
+}
+/* .alert-info .alert-link {
+  color: #d2d2d2;
+} */
+.alert-warning {
+  background-color: #63BFDA; /*#287CBA #976DDB #f0ad4e */
+  border-color: transparent;
+  color: #FFFFFF;
 }
 .alert-warning hr {
   border-top-color: rgba(0, 0, 0, 0);
@@ -188,28 +225,10 @@ tr.shown td.ann-details-control, tr.shown td.dup-details-control, tr.shown td.ge
     background: url('../images/childRow_details_close.png') no-repeat center center;
 }
 
-/* input */
-.input-xs {
-  height: 22px;
-  padding: 2px 5px;
-  font-size: 12px;
-  line-height: 1.5; //If Placeholder of the input is moved up, rem/modify this.
-  border-radius: 3px;
-  }
-
-
-@media (min-width: 1160px) {
-	 div[class^="col"]{padding-left:10px; padding-right:10px;} /**/
-
-    .container{
-      /* max-width: 2000px; */
-      width:85%;
-      } /* 1160px 970px;  */ 
-}
-
-#dc-straincount-chart .axis text {
-  font-size: 11px;
-  } 
+/* .x-axis-label {font-size: 1px;} */
+/* #dc_straincount_chart .axis text {
+  font-size: 1px;
+} */
 
 /*carousel
 .carousel .item {
@@ -221,12 +240,12 @@ tr.shown td.ann-details-control, tr.shown td.dup-details-control, tr.shown td.ge
 	/*#66AAD6;*/
 }
 /*.carousel .item {background-color: black;}*/
- 
+
 /* .carousel-control.right, .carousel-control.left {
   background-image:none;
 } */
 
-.carousel-control.left, .carousel-control.right{ 
+.carousel-control.left, .carousel-control.right{
 background: none;/*rgba(94,164,233,0.9) ;/*!important; */
 /*filter: progid:none !important; */
 }
@@ -250,30 +269,21 @@ background: none;/*rgba(94,164,233,0.9) ;/*!important; */
     background-color: rgba(94,164,233,0.5); /*#5EA4E9;*/
 }
 
-/*  noUiSlider background color */
-.noUi-connect { background:#2980B9;}
-
-/* vertical noUiSlider */
-#slider-vertical-range {
-  height: 300px;
-  /* margin: 0 auto 0px; */
-}
-
 
 /*slider style*/
 input[type=range] {
     /*removes default webkit styles*/
     -webkit-appearance: none;
-    
+
     /*fix for FF unable to apply focus style bug */
     border: 1px solid white;
-    
+
     /*required for proper track sizing in FF*/
-    width: 160px;
+    width: 60px;
     margin-top: 7px
 }
 input[type=range]::-webkit-slider-runnable-track {
-    width: 160px;
+    width: 60px;
     height: 5px;
     background: #ddd;
     border: none;
@@ -297,7 +307,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 
 input[type=range]::-moz-range-track {
-    width: 160px;
+    width: 60px;
     height: 5px;
     background: #ddd;
     border: none;
@@ -318,12 +328,12 @@ input[type=range]:-moz-focusring{
 }
 
 input[type=range]::-ms-track {
-    width: 160px;
+    width: 60px;
     height: 5px;
-    
+
     /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
     background: transparent;
-    
+
     /*leave room for the larger thumb to overflow with a transparent border */
     border-color: transparent;
     border-width: 6px 0;
@@ -352,4 +362,5 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
     background: #ccc;
 }
+
 
