--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html
     link(rel="stylesheet", type="text/css", href='stylesheets/dc.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/dataTables.bootstrap.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/dataTables-customized.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/select.bootstrap.css')
+    //-link(rel="stylesheet", type="text/css", href='stylesheets/select.bootstrap.css')
     //- link(rel="stylesheet", type="text/css", href='stylesheets/jquery.dataTables.min.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
