use species-list-info.js separately

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -165,7 +165,7 @@ html
           table#dc_data_table_meta.table.table-striped.table(cellspacing='0', width='100%')
     include footer
     block content
-    //- script(src='dist/all-edge.js')
+    script(src='javascripts/species-list-info.js')
     script(src='/dist/client_bundle.js')
     // script(src='javascripts/colors.js')
     // script(src='javascripts/species-list-info.js')
