--- a/views/layout.jade
+++ b/views/layout.jade
@@ -143,12 +143,12 @@ html
               #searchAccession-group.input-group
                 span.input-group-addon.primary.sm-customized
                   span.glyphicon.glyphicon-search
-                input.form-control.sm-customized(type='text', placeholder='accession', aria-describedby='sizing-addon1',oninput='search_accession(this.value)')
+                input.form-control.sm-customized.tree_search(type='text', placeholder='accession', aria-describedby='sizing-addon1',oninput='search_accession(this.value)')
             .col-md-2
               #searchAnnotation-group.input-group
                 span.input-group-addon.primary.sm-customized
                   span.glyphicon.glyphicon-search
-                input.form-control.sm-customized(type='text', placeholder='annotation', aria-describedby='sizing-addon1',oninput='search_annotation(this.value)')
+                input.form-control.sm-customized.tree_search(type='text', placeholder='annotation', aria-describedby='sizing-addon1',oninput='search_annotation(this.value)')
             #download_geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
