--- a/public/stylesheets/page-appearance.css
+++ b/public/stylesheets/page-appearance.css
@@ -82,10 +82,29 @@ th, td {
 }
  tr:hover {background-color: #f5f5f5}
 
-table.dataTable thead > tr > th {
-    padding-left: 1px;
+table.dataTable thead>tr>th {
+    /*font-size: 8px;*/
+    padding-left: 2px;
     padding-right: 18px;
 }
+
+table.dataTable thead>tr>th.sorting_asc,
+table.dataTable thead>tr>th.sorting_desc,
+table.dataTable thead>tr>th.sorting,
+table.dataTable thead>tr>td.sorting_asc,
+table.dataTable thead>tr>td.sorting_desc,
+table.dataTable thead>tr>td.sorting {
+  padding-left:  2px;
+  padding-right: 22px;
+}
+
+.table>tbody>tr>td,.table>tbody>tr>th,
+.table>tfoot>tr>td,.table>tfoot>tr>th,
+.table>thead>tr>td,.table>thead>tr>th {
+    padding: 7px;
+    border-top: 0px;
+}
+
 /*table.dataTable th {
    text-align: left;
 } */
