--- a/public/stylesheets/page-appearance.css
+++ b/public/stylesheets/page-appearance.css
@@ -14,7 +14,8 @@
 .modal-lg {width:85%;}
 
 body {
-  background-color: rgba(255, 140, 0, 0.03); !important /* rgba(255, 140, 10); */
+  background-color: rgba(255, 140, 0, 0.015); !important
+  /* rgba(255, 140, 10); */
   font-family: "proxima-nova", Arial,sans-serif;
   font-size: 15px;
   line-height: 1.42857143;
@@ -461,6 +462,10 @@ input[type=range]:focus::-ms-fill-upper {
   border-top:0px;
   border-left: 1px solid white;
 }
-
-
 /*td {overflow:hidden; white-space:nowrap}*/
+
+/** css for pipeline.jade **/
+p.pipeline_text{
+  font-size: 16px;
+}
+
