update panX web text font-size

--- a/public/stylesheets/page-appearance.css
+++ b/public/stylesheets/page-appearance.css
@@ -465,7 +465,7 @@ input[type=range]:focus::-ms-fill-upper {
 /*td {overflow:hidden; white-space:nowrap}*/
 
 /** css for pipeline.jade **/
-p.pipeline_text{
+.panX_text{
   font-size: 16px;
 }
 
