add new pipeline figure

--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -75,7 +75,7 @@ html
               a(href="https://github.com/nextstrain/phyloTree")
                 u PhyloTree
               |  (highly flexible tree visualization JS library) built by
-              a(href="http://neherlab.org/")
+              a(href="https://github.com/neherlab")
                u Richard Neher
             br
           .alert.alert-info(role='alert') Analysis pipeline overview
@@ -83,12 +83,12 @@ html
             p Data source: RefSeq records from NCBI
             p
               b DIAMOND + MCL + phylogeny-based post-processing
-            //-br
-            //-.item
+            br
+            .item
               figure
-                img(src='./images/pipe-MPAV.png', alt='...', style='width:655px;height:665px;')
+                img(src='./images/panX-pipeline.png', alt='...', style='width:100%;')
                 br
-                figcaption Fig.1 A overview of pan-genome analysis and mapping pipeline.
+                figcaption Fig.1 A overview of pan-genome analysis and visualization pipeline.
           br
           #DIAMOND
             .alert.alert-info(role='alert') DIAMOND
