--- a/public/stylesheets/page-appearance.css
+++ b/public/stylesheets/page-appearance.css
@@ -465,8 +465,18 @@ input[type=range]:focus::-ms-fill-upper {
 }
 /*td {overflow:hidden; white-space:nowrap}*/
 
-/** css for pipeline.jade **/
-.panX_text{
+/** css (pipeline.jade tutorial.jade) **/
+ul.nav-pills {
+  top: 60px;
+  position: fixed;
+}
+ul.fixed-dropdown>li>a {
+  padding: 6px 8px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color:rgba(255, 255, 255, 0.5);
+}
+.panX-text {
   font-size: 16px;
 }
-
+/****/
