--- a/views/home.jade
+++ b/views/home.jade
@@ -19,8 +19,8 @@ html
         br
         br
         .col-md-1
-      .row
-        .col-md-8.panX_text
+      .row.panX-text
+        .col-md-8
           br
           p panX is a software package for comprehensive pan-genome analysis and web-based interactive visualization and dynamic exploration.
           p It encompasses various interconnected viewers, allows rapid search via gene name, diversity, duplications, annotation, integrates strain-associated meta-data, gene presence/absence pattern, gene gain/loss event on phylogeny.
@@ -33,26 +33,26 @@ html
             //- .item
             //-   img(data-gifffer='./images/overall2.gif', style='width:1180px;height:696px;')
             //- br
-      .row.panX_text
-        .col-md-8
+      .row.panX-text
+        .col-md-6
           .thumbnail.shadow_homepagex
             img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;')
             .caption
               h4 Epidemiology of 616 Streptococcus pneumoniae strains
               p Croucher et al. 2015
               p
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616') Demo
                 a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
 
-        //.col-md-4
+        .col-md-6
           .thumbnail.shadow_homepagex
             img(src='./images/Pm-compare.jpg', alt='...', style='width:100%;')
             .caption
-              h4 P. marinus presence/absence, gain/loss pattern
-              p details...
+              h4 Prochlorococcus marinus gene presence/absence and gain/loss pattern
+              p details.
               p
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
-                a.btn.btn-default(href='./P_marinus', role='button') Explore
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
+                a.btn.btn-default(href='./Pmnawg', role='button') Explore
         //.col-md-4
           .thumbnail.shadow_homepagex
             img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
@@ -62,7 +62,7 @@ html
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
                 a.btn.btn-default(href='#', role='button') Explore
-      //.row.panX_text
+      //.row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
             img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
@@ -82,7 +82,18 @@ html
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
                 a.btn.btn-default(href='#', role='button') Explore
 
-      #myModal.modal.fade(role='dialog')
+      #Modal_Sp616.modal.fade(role='dialog')
+        .modal-dialog.modal-lg
+          .modal-content
+            .modal-header
+              button.close(type='button', data-dismiss='modal') ×
+              h4.modal-title Gene presence/absence, gain/loss pattern
+            .modal-body
+              img(src='./images/Demo-Sp616.gif', style='width:100%;')
+            .modal-footer
+              button.btn.btn-info(type='button', data-dismiss='modal') Close
+
+      #Modal_Pm.modal.fade(role='dialog')
         .modal-dialog.modal-lg
           .modal-content
             .modal-header
