--- a/views/home.jade
+++ b/views/home.jade
@@ -23,7 +23,7 @@ html
         .col-md-8
           br
           p panX is a software package for comprehensive pan-genome analysis and web-based interactive visualization and dynamic exploration.
-          p It encompasses various interconnected viewers, allows rapid search via gene name, diversity, duplications, annotation, integrates strain-associated meta-data, gene presence/absence pattern, gene gain/loss event on phylogeny.
+          p It encompasses various interconnected viewers, allows rapid search via gene name, diversity, duplications, annotation, integrates strain-associated meta-data (collection data, country, resistance, etc.), gene presence/absence pattern, gene gain/loss event on phylogeny.
           p panX helps users to gain insights into bacterial genomic diversity and the dynamics of the accessory genes linked with habitat adaptation, antibiotic resistance, virulence, as well as epidemiological markers.
         br
         //.col-md-6
@@ -46,10 +46,10 @@ html
 
         .col-md-6
           .thumbnail.shadow_homepagex
-            img(src='./images/Pm-compare.jpg', alt='...', style='width:100%;')
+            img(src='./images/Pm-case.jpg', alt='...', style='width:100%;')
             .caption
               h4 Prochlorococcus marinus gene presence/absence and gain/loss pattern
-              p details.
+              p
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
                 a.btn.btn-default(href='./Pmnawg', role='button') Explore
@@ -100,7 +100,7 @@ html
               button.close(type='button', data-dismiss='modal') ×
               h4.modal-title Gene presence/absence, gain/loss pattern
             .modal-body
-              img(src='./images/Demo-Sp616.gif', style='width:100%;')
+              img(src='./images/Demo-Pm.gif', style='width:100%;')
             .modal-footer
               button.btn.btn-info(type='button', data-dismiss='modal') Close
     include footer
