update Pm case figure

--- a/views/home.jade
+++ b/views/home.jade
@@ -46,7 +46,7 @@ html
 
         .col-md-6
           .thumbnail.shadow_homepagex
-            img(src='./images/Pm-case.jpg', alt='...', style='width:100%;')
+            img(src='./images/Pm_case.png', alt='...', style='width:100%;')
             .caption
               h4 Prochlorococcus marinus gene presence/absence and gain/loss pattern
               p
