--- a/views/layout.jade
+++ b/views/layout.jade
@@ -107,7 +107,7 @@ html
             .col-md-2
               //- br
               #colorblind_div(style='visibility: hidden;')
-                input#colorbind_safe.btn_tooltip(type='checkbox', data-toggle='toggle', data-style='ios', data-on="<i class='glyphicon glyphicon-eye-open'></i>", data-off="<i class='glyphicon glyphicon-eye-open'></i>", data-size='mini')
+                input#colorbind_safe.btn_tooltip(type='checkbox', data-toggle='toggle', data-style='ios', data-on="<i class='glyphicon glyphicon-eye-open'></i>colorblind safe", data-off="<i class='glyphicon glyphicon-eye-open'></i>common color", data-size='mini',data-onstyle='success', data-offstyle='info')
               svg#coreTree_legend
             .col-md-10
               #speciesTreeDiv
